# inventory-management-system

./: .gitignore  README.md  project_description.json  pyproject.toml  pytest.ini  requirements.txt
src/: analytics_service.py  crud.py  main.py  models.py  router.py  schemas.py  test.env
src/auth/: dependencies.py  router.py  utils.py
src/core/: config.py  database.py
src/repo/: analytics_repo.py  router.py
src/tests/: test.env  test_auth.py  test_src.py
